modified:   index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="hero-section">
       <nav class="main-nav">
         <div class="nav-brand">
-          <a href="/" class="brand-link">
+          <a href="/Edu-Blink" class="brand-link">
             <h1><i class="ri-book-shelf-line"></i>E-Blink</h1>
           </a>
         </div>
