fixed nav link navigation

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <section class="hero-section">
       <nav class="main-nav">
         <div class="nav-brand">
-          <a href="/Edu-Blink" class="brand-link">
+          <a href="index.html" class="brand-link">
             <h1><i class="ri-book-shelf-line"></i>E-Blink</h1>
           </a>
         </div>
         <div class="nav-menu">
           <ul class="nav-list">
-            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Courses</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Mentors</a></li>
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
