renamed:    img/amazon.jpg -> img/companies/amazon.jpg 	renamed:    img/apple.jpg -> img/companies/apple.jpg 	renamed:    img/google.jpg -> img/companies/google.jpg 	renamed:    img/meta.jpg -> img/companies/meta.jpg 	renamed:    img/microsoft.jpg -> img/companies/microsoft.jpg 	renamed:    img/netflix.jpg -> img/companies/netflix.jpg 	deleted:    img/course1.jpg 	deleted:    img/course2.jpg 	deleted:    img/course3.webp 	new file:   img/courses/datascience.png 	new file:   img/courses/mL.png 	new file:   img/courses/webdev.jpg 	new file:   img/instructor/instructor1.png 	new file:   img/instructor/instructor2.png 	new file:   img/instructor/instructor3.png

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="featured-grid">
         <div class="featured-card">
           <div class="featured-img">
-            <img src="img/course1.jpg" alt="Web Development Course" />
+            <img src="img/courses/webdev.jpg" alt="Web Development Course" />
             <span class="featured-tag">Bestseller</span>
           </div>
           <div class="featured-content">
@@ -201,9 +201,8 @@
             </div>
             <div class="course-footer">
               <div class="instructor-info">
-                <img src="img/course1.jpg" alt="John Smith" />
-                <!-- <img src="img/instructor1.jpg" alt="John Smith" /> -->
-                <span>Harsh Sharma</span>
+                <img src="img/instructor/instructor1.png" alt="John Smith" />
+                <span>rahul gupta</span>
               </div>
               <div class="course-price">$99.99</div>
             </div>
@@ -212,7 +211,7 @@
 
         <div class="featured-card">
           <div class="featured-img">
-            <img src="img/course2.jpg" alt="Data Science Course" />
+            <img src="img/courses/datascience.png" alt="Data Science Course" />
             <span class="featured-tag">New</span>
           </div>
           <div class="featured-content">
@@ -228,10 +227,9 @@
             </div>
             <div class="course-footer">
               <div class="instructor-info">
-                <!-- <img src="img/instructor2.jpg" alt="Sarah Johnson" /> -->
-                <img src="img/course1.jpg" alt="Harsh Sharma" />
+                <img src="img/instructor/instructor2.png" alt="Sarah Johnson" />
 
-                <span>Harsh Sharma</span>
+                <span>vihaan singh</span>
               </div>
               <div class="course-price">$89.99</div>
             </div>
@@ -240,7 +238,7 @@
 
         <div class="featured-card">
           <div class="featured-img">
-            <img src="img/course3.webp" alt="Machine Learning Course" />
+            <img src="img/courses/mL.png" alt="Machine Learning Course" />
             <span class="featured-tag">Popular</span>
           </div>
           <div class="featured-content">
@@ -256,10 +254,9 @@
             </div>
             <div class="course-footer">
               <div class="instructor-info">
-                <!-- <img src="img/instructor3.jpg" alt="Michael Brown" /> -->
-                <img src="img/course3.webp" alt="Michael Brown" />
+                <img src="img/instructor/instructor3.png" alt="Michael Brown" />
                  
-                <span>Akarsh Vyash</span>
+                <span>Aarav Sharma</span>
               </div>
               <div class="course-price">$129.99</div>
             </div>
@@ -402,22 +399,22 @@
         </div>
         <div class="companies-grid">
           <div class="company-card">
-            <img src="./img/google.jpg" alt="Google">
+            <img src="./img/companies/google.jpg" alt="Google">
           </div>
           <div class="company-card">
-            <img src="./img/microsoft.jpg" alt="Microsoft">
+            <img src="./img/companies/microsoft.jpg" alt="Microsoft">
           </div>
           <div class="company-card">
-            <img src="./img/amazon.jpg" alt="Amazon">
+            <img src="./img/companies/amazon.jpg" alt="Amazon">
           </div>
           <div class="company-card">
-            <img src="./img/meta.jpg" alt="Meta">
+            <img src="./img/companies/meta.jpg" alt="Meta">
           </div>
           <div class="company-card">
-            <img src="./img/apple.jpg" alt="Apple">
+            <img src="./img/companies/apple.jpg" alt="Apple">
           </div>
           <div class="company-card">
-            <img src="./img/netflix.jpg" alt="Netflix">
+            <img src="./img/companies/netflix.jpg" alt="Netflix">
           </div>
         </div>
       </div>
