modified:   README.md 	new file:   img/companies/adobe.png 	deleted:    img/companies/amazon.jpg 	new file:   img/companies/amazon.png 	deleted:    img/companies/apple.jpg 	new file:   img/companies/apple.png 	deleted:    img/companies/google.jpg 	new file:   img/companies/google.png 	deleted:    img/companies/meta.jpg 	new file:   img/companies/meta.png 	deleted:    img/companies/microsoft.jpg 	new file:   img/companies/microsoft.png 	deleted:    img/companies/netflix.jpg 	new file:   img/companies/netflix.png 	updated testimonials to auto scroll:   index.html 	updated testimonials to auto scroll:   script.js 	updated testimonials to auto scroll:   style.css

--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
           <p>feedback from our amazing students</p>
         </div>
       </div>
-      <div class="swiper testimonialSwiper">
-        <div class="swiper-wrapper">
+      <div class="testimonials-container">
+        <div class="testimonials-track">
           <!-- Testimonial 1 -->
-          <div class="swiper-slide testimonial-card">
+          <div class="testimonial-card">
             <div class="testimonial-quote">
               <i class="ri-double-quotes-l"></i>
               <p>The courses are well-structured and the instructors are highly knowledgeable. I've learned so much in such a short time!</p>
@@ -297,7 +297,7 @@
             </div>
           </div>
           <!-- Testimonial 2 -->
-          <div class="swiper-slide testimonial-card">
+          <div class="testimonial-card">
             <div class="testimonial-quote">
               <i class="ri-double-quotes-l"></i>
               <p>The platform is user-friendly and the course content is up-to-date with industry standards. Highly recommended!</p>
@@ -320,7 +320,7 @@
             </div>
           </div>
           <!-- Testimonial 3 -->
-          <div class="swiper-slide testimonial-card">
+          <div class="testimonial-card">
             <div class="testimonial-quote">
               <i class="ri-double-quotes-l"></i>
               <p>The mentors are incredibly supportive and the community is very engaging. It's been an amazing learning journey!</p>
@@ -343,7 +343,7 @@
             </div>
           </div>
           <!-- Testimonial 4 -->
-          <div class="swiper-slide testimonial-card">
+          <div class="testimonial-card">
             <div class="testimonial-quote">
               <i class="ri-double-quotes-l"></i>
               <p>The interactive exercises and real-world projects have helped me build a strong portfolio. The platform exceeded my expectations!</p>
@@ -366,7 +366,7 @@
             </div>
           </div>
           <!-- Testimonial 5 -->
-          <div class="swiper-slide testimonial-card">
+          <div class="testimonial-card">
             <div class="testimonial-quote">
               <i class="ri-double-quotes-l"></i>
               <p>The flexibility of learning at my own pace while getting expert guidance has been invaluable. The community support is amazing!</p>
@@ -399,22 +399,25 @@
         </div>
         <div class="companies-grid">
           <div class="company-card">
-            <img src="./img/companies/google.jpg" alt="Google">
+            <img src="./img/companies/google.png" alt="Google">
           </div>
           <div class="company-card">
-            <img src="./img/companies/microsoft.jpg" alt="Microsoft">
+            <img src="./img/companies/adobe.png" alt="Adobe">
           </div>
           <div class="company-card">
-            <img src="./img/companies/amazon.jpg" alt="Amazon">
+            <img src="./img/companies/microsoft.png" alt="Microsoft">
           </div>
           <div class="company-card">
-            <img src="./img/companies/meta.jpg" alt="Meta">
+            <img src="./img/companies/amazon.png" alt="Amazon">
           </div>
           <div class="company-card">
-            <img src="./img/companies/apple.jpg" alt="Apple">
+            <img src="./img/companies/meta.png" alt="Meta">
           </div>
           <div class="company-card">
-            <img src="./img/companies/netflix.jpg" alt="Netflix">
+            <img src="./img/companies/apple.png" alt="Apple">
+          </div>
+          <div class="company-card">
+            <img src="./img/companies/netflix.png" alt="Netflix">
           </div>
         </div>
       </div>
